
  [ David Kalnischkies ]
  * apt-pkg/cacheset.cc:
    - handle :all and :native correctly as architectures again
      in the commandline parsing (regression in 0.9.7)
  * apt-pkg/packagemanager.cc:
    - do not segfault if nothing can be configured to statisfy
      a pre-depends (e.g. in a pre-depends loop) (Closes: #681958)
  * apt-pkg/contrib/mmap.cc:
    - refer to APT::Cache-Start in case the growing failed as if -Limit is
      really the offender it will be noted in a previous error message.

 -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 18 Jul 2012 11:45:57 +0200

apt (0.9.7.2) unstable; urgency=low

  [ Manpages translation updates ]
  * French (Christian Perrier)
  * German (Chris Leick)

  [ Program translation updates ]
  * Greek (Θανάσης Νάτσης)
  * Japanese (Kenshi Muto) (Closes: #679662)
  * Russian (Yuri Kozlov) (Closes: #679599)
  * Danish (Joe Dalton) (Closes: #680119)
  * Portuguese (Miguel Figueiredo) (Closes: #680616)

  [ David Kalnischkies ]
  * debian/apt.cron.daily:
    - do not try to backup extended_states file if it doesn't
      exist (Closes: #680287)
  * ftparchive/writer.cc:
    - handle the APT::FTPArchive::Packages::SHA512 option correctly instead
      of overriding SHA256, thanks Christian Marillat! (Closes: #680252)
  * cmdline/apt-mark.cc:
    - arch:all packages are treated as arch:native packages, but dpkg
      expects pkg:all for selections, so use the arch of the installed
      version instead of the package structure if possible.
      Thanks to Stepan Golosunov for the report! (Closes: #680041)
  * apt-pkg/clean.cc:
    - run autoclean against pkg:arch and not always against pkg:native as
      this removes valid cache entries (Closes: #679371)
  * apt-pkg/deb/deblistparser.cc:
    - negative dependencies need to apply to all architectures,
      but those with a specific architecture only apply to this one
  * apt-pkg/cachefilter.cc: